--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ test.fetch.property=abc.com
 ####Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=server
+db.choice=local
 
-schema.name=sr1
+schema.name=capstone
 local.username=root
-local.password=
+local.password=password
 
 database.local=localhost
 database.server=172.16.0.182
