--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ test.fetch.property=abc.com
 #### Backend Developers just change the following to your own settings###
 ### change db.choice to either "server" or "local"
 ### change schema.name to your schema name
-db.choice=local
+db.choice=server
 schema.name=devdb
 local.username=devdb
 local.password=password
